[gd_scene load_steps=11 format=3 uid="uid://tsy1klep4wkl"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_ey6x5"]
[ext_resource type="Texture2D" uid="uid://bmuxchiuwxdf7" path="res://Assets/Sprites/background.jpg" id="2_gwhb5"]
[ext_resource type="Script" path="res://Scripts/navigation.gd" id="2_x4q6q"]
[ext_resource type="Script" path="res://Scripts/buy_item.gd" id="3_cevxn"]
[ext_resource type="Texture2D" uid="uid://wkhbtxh47vya" path="res://Assets/Sprites/seed1.png" id="3_kkvfc"]
[ext_resource type="PackedScene" uid="uid://bvhtrc0fq887a" path="res://Objects/vase.tscn" id="3_p1sp8"]
[ext_resource type="PackedScene" uid="uid://cbfmrqva87e6f" path="res://Objects/seed.tscn" id="4_et3ax"]
[ext_resource type="Texture2D" uid="uid://s3j70c0c1n1h" path="res://Assets/Sprites/stage4-crown.png" id="8_hsllr"]
[ext_resource type="Texture2D" uid="uid://cbvepbtj7h8qt" path="res://Assets/Sprites/stage4-base1.png" id="9_5hjnr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v5y3"]
size = Vector2(40, 52)

[node name="Shop" type="Node2D"]
script = ExtResource("1_ey6x5")

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(225, 315)

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_gwhb5")
offset = Vector2(250, 315)

[node name="BuySeed" type="Area2D" parent="."]
position = Vector2(47, 121)
script = ExtResource("3_cevxn")
price = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuySeed"]
shape = SubResource("RectangleShape2D_3v5y3")

[node name="Sprite2D" type="Sprite2D" parent="BuySeed"]
texture = ExtResource("3_kkvfc")

[node name="Price" type="Label" parent="BuySeed"]
offset_left = -20.0
offset_top = 22.0
offset_right = 20.0
offset_bottom = 48.0
horizontal_alignment = 1

[node name="BuySeed2" parent="." instance=ExtResource("4_et3ax")]
position = Vector2(150, 129)
script = null

[node name="BuySeed3" parent="." instance=ExtResource("4_et3ax")]
position = Vector2(250, 127)
script = null

[node name="BuyVase" parent="." instance=ExtResource("3_p1sp8")]
position = Vector2(350, 170)
script = null

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 500.0
offset_bottom = 46.0

[node name="Daisy" type="Label" parent="UI"]
layout_mode = 0
offset_left = 47.0
offset_top = 12.0
offset_right = 87.0
offset_bottom = 38.0
text = "0"

[node name="daisy-icon" type="Sprite2D" parent="UI/Daisy"]
position = Vector2(-22, 12)
scale = Vector2(0.54902, 0.54902)
texture = ExtResource("8_hsllr")

[node name="Stage4-base4" type="Sprite2D" parent="UI/Daisy"]
position = Vector2(-22, 13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_5hjnr")

[node name="Buttercup" type="Label" parent="UI"]
self_modulate = Color(1, 1, 0.152941, 1)
layout_mode = 0
offset_left = 147.0
offset_top = 12.0
offset_right = 187.0
offset_bottom = 38.0
text = "0"

[node name="butter-icon" type="Sprite2D" parent="UI/Buttercup"]
self_modulate = Color(1, 1, 0.152941, 1)
position = Vector2(-22, 12)
scale = Vector2(0.54902, 0.54902)
texture = ExtResource("8_hsllr")

[node name="Stage4-base1" type="Sprite2D" parent="UI/Buttercup"]
self_modulate = Color(1, 0.768627, 1, 1)
position = Vector2(-22, 13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_5hjnr")

[node name="Tulip" type="Label" parent="UI"]
self_modulate = Color(0.254902, 0.47451, 1, 1)
layout_mode = 0
offset_left = 247.0
offset_top = 12.0
offset_right = 287.0
offset_bottom = 38.0
text = "0"

[node name="tulip-icon" type="Sprite2D" parent="UI/Tulip"]
self_modulate = Color(0.254902, 0.47451, 1, 1)
position = Vector2(-22, 12)
scale = Vector2(0.54902, 0.54902)
texture = ExtResource("8_hsllr")

[node name="Stage4-base2" type="Sprite2D" parent="UI/Tulip"]
position = Vector2(-22, 13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_5hjnr")

[node name="Rose" type="Label" parent="UI"]
self_modulate = Color(0.882353, 0.27451, 0.258824, 1)
layout_mode = 0
offset_left = 347.0
offset_top = 12.0
offset_right = 387.0
offset_bottom = 38.0
text = "0"

[node name="rose-icon" type="Sprite2D" parent="UI/Rose"]
self_modulate = Color(0.882353, 0.27451, 0.258824, 1)
position = Vector2(-22, 12)
scale = Vector2(0.54902, 0.54902)
texture = ExtResource("8_hsllr")

[node name="Stage4-base3" type="Sprite2D" parent="UI/Rose"]
position = Vector2(-22, 13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_5hjnr")

[node name="Money" type="Label" parent="UI"]
layout_mode = 0
offset_left = 447.0
offset_top = 12.0
offset_right = 487.0
offset_bottom = 35.0
text = "$ 0"

[node name="Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = -50.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = 629.0
script = ExtResource("2_x4q6q")
scene = "res://Scenes/nursery.tscn"

[connection signal="input_event" from="BuySeed" to="BuySeed" method="_on_input_event"]
[connection signal="mouse_entered" from="BuySeed" to="BuySeed" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BuySeed" to="BuySeed" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/Button" to="UI/Button" method="_on_pressed"]

[editable path="BuySeed2"]
[editable path="BuySeed3"]
